--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -2,11 +2,20 @@
   padding-top: 128px;
   padding-bottom: 64px;
 }
-
+.perspectiveWrapper{
+  position: fixed;
+  width: 100%;
+  height: 40%;
+  bottom: 0;
+  background-color: hsl(195deg, 20%, 86%);
+}
 .maxWidthWrapper {
+  max-width: 1024px;
+  isolation: isolate;
 }
 
 .header {
+  max-width: 65%;
   padding-bottom: 64px;
 }
 
@@ -24,7 +33,13 @@
 }
 
 .characterWrapper {
+  min-height: 500px;
+  position:fixed;
+  top:130px;
+  right:0px;
+  min-width: 50%;
 }
 
 .controlColumn {
+  max-width: 50%;
 }
